change font size type

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
   position: relative;
   display: inline-block;
   font-family: monospace;
-  font-size: 13;
+  /* font-size: 72; */
   color: #ea7a3b;
   min-height: 1.5em;
 }
