--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,20 @@ body {
 }
 
 
+.zilla-slab-regular {
+  font-family: "Zilla Slab", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.zilla-slab-bold {
+  font-family: "Zilla Slab", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+
 
 @keyframes blink {
   0%,
